RESOLVED FIXED304445
[cleanup] computedLineHeightForFontUnits should not (implicit) floor
https://bugs.webkit.org/show_bug.cgi?id=304445
Summary [cleanup] computedLineHeightForFontUnits should not (implicit) floor
alan
Reported 2025-12-18 15:11:22 PST
ssia
Attachments
[fast-cq]Patch (1.87 KB, patch)
2025-12-18 15:12 PST, alan
no flags
alan
Comment 1 2025-12-18 15:12:00 PST
Created attachment 477783 [details] [fast-cq]Patch
EWS
Comment 2 2025-12-19 06:53:59 PST
Committed 304747@main (c28c82418a33): <https://commits.webkit.org/304747@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 477783 [details].
Radar WebKit Bug Importer
Comment 3 2025-12-19 06:54:17 PST
Note You need to log in before you can comment on or make changes to this bug.